<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">DriveNotes</string>
    <string name="new_note_activity_title">New Note</string>
    <string name="edit_note_activity_title">Edit Note</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_new">New</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
    
    <string name="new_note_title_hint">Title</string>
    <string name="new_note_hint">Type a note</string>
	<string name="empty_string"></string>
	
	
	<string name="microphone">Microphone</string>
	<string name="camera">Camera</string>
	<string name="map">Map</string>
	<string name="audio">Play</string>
	<string name="delete">Delete</string>
	<string name="picture">Photo</string>
	<string name="edit">Edit</string>
	<string name="padlock">Padlock</string>
	<string name="swheel">Steering Wheel</string>
	<string name="bulb">Bulb</string>
	<string name="category">Category</string>
	
	<!--  Strings used for UI design -->
	<string name="large_string">Laaaaaaaaaaargeeeee Striiiiiiiiiing</string>
	<string name="sample_note_title">Lunch Places</string>
    <string name="sample_focused_note_text">that place looks good for lunch</string>
	<string name="sample_date_and_time">11:43 am 01/10/2014</string>
	<string name="sample_date">01/10/2014</string>
	<string-array name="sample_tags">
	    <item>Personal</item>
	    <item>Work</item>
	    <item>Ideas</item>
	    <item>Hobbies</item>
	</string-array>	
</resources>
